# training-programming-best-practices

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  TRAINING.md
src/: CMakeLists.txt
src/cApiLib/: CMakeLists.txt  InterfaceForCApi.h  mediaScanner.cpp  mediaScanner.h
src/divisionlib/: CMakeLists.txt  Division.cpp  Division.h
src/multiplierfromfilelib/: MultiplierFromFile.cpp  MultiplierFromFile.h  data.txt
src/multiplierlib/: CMakeLists.txt  Multiplier.cpp  Multiplier.h
src/pwmlib/: motor.h  pwm.cpp  pwm.h
src/unittest/: CMakeLists.txt  gtest_main.cc  testDivision.cpp  testMediaScanner.cpp  testMultiplier.cpp  testMultiplierFromFile.cpp  testMultiplierInternal.cpp  testMultiplierParamAndFixture.cpp  testPwm.cpp
unittest-course-part/: .gitpod.yml  CMakeLists.txt  README.md
unittest-course-part/src/: CMakeLists.txt  TRAINING.md
unittest-course-part/src/cApiLib/: mediaScanner.cpp  mediaScanner.h
unittest-course-part/src/multiplierWithLoggerlib/: CMakeLists.txt  MultiplierWithLogger.cpp  MultiplierWithLogger.h
unittest-course-part/src/multiplierfromdblib/: CMakeLists.txt  MultiplierFromDb.cpp  MultiplierFromDb.h
unittest-course-part/src/multiplierfromfilelib/: CMakeLists.txt  MultiplierFromFile.cpp  MultiplierFromFile.h
unittest-course-part/src/multiplierlib/: CMakeLists.txt  Multiplier.cpp  Multiplier.h
unittest-course-part/src/pwmlib/: CMakeLists.txt  motor.h  pwm.cpp  pwm.h
unittest-course-part/src/unittest/: CMakeLists.txt  gtest_main.cc  test1.cpp  test2.cpp  testMediaScanner.cpp  testMultiplier.cpp  testMultiplierFromFile.cpp  testMultiplierInternal.cpp
