################################################################################
#                                                                              #
# Copyright (C) 2021 Fondazione Istitito Italiano di Tecnologia (IIT)          #
# All Rights Reserved.                                                         #
#                                                                              #
################################################################################

# @author Luca Tricerri <luca.tricerri@iit.it>

add_subdirectory(multiplierlib)
add_subdirectory(multiplierfromfilelib)
add_subdirectory(multiplierWithLoggerlib)

